--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "browserify": "^17.0.0",
     "common": "^0.2.5",
     "jira-connector": "^3.1.0",
+    "jsdoc": "^3.6.6",
     "module": "^1.2.5",
     "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
