--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "browserify": "^17.0.0",
     "common": "^0.2.5",
+    "cors-anywhere": "^0.4.3",
     "jira-connector": "^3.1.0",
     "jsdoc": "^3.6.6",
     "module": "^1.2.5",
